# OC_P12_Epicevents

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
EpicEvents/: settings.py  urls.py
EpicEvents/EpicEvents/: settings.py
app/: admin.py  models.py  permissions.py  serializers.py  views.py
app/migrations/: 0001_initial.py  0002_employee_alter_client_sales_contact_and_more.py  0003_alter_contract_payment_due_alter_event_event_date.py  0004_alter_client_date_created_alter_client_date_updated_and_more.py  0005_alter_client_date_created_alter_client_date_updated_and_more.py  0006_alter_contract_sales_contact.py
epicevents/: settings.py  urls.py
